--- a/index.html
+++ b/index.html
@@ -11,21 +11,22 @@
         <nav>
             <span><img width="53" src="assets/images/logo.svg" alt=""></span>
             <div>
-                <button>English</button>
-                <button>Sign In</button>
+                <button class="btn">English</button>
+                <button class="btn btn-red-sm">Sign In</button>
             </div>
         </nav>
         <div class="box">
         </div>
         <div class="hero">
-            <span>Enjoy big movies, hit series and more from 149.</span>
+            <span>Enjoy big movies, hit series and more from ₹ 149.</span>
             <span>Join today. Cancel anytime.</span>
             <span>Ready to watch? Enter your email to create or restart your membership.</span>   
-            <div>
+            <div class="hero-buttons">
                 <input type="text" placeholder="Enmail Adress">
-                <button>Get Started</button>
+                <button class="btn btn-red">Get Started</button>
             </div>
         </div>
+        <div class="sepration"></div>
     </div>
 </body>
 </html>
