--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Netflix India - Watch TV Shows Online, Watch Movies Online</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="main">
         <nav>
@@ -20,13 +23,107 @@
         <div class="hero">
             <span>Enjoy big movies, hit series and more from ₹ 149.</span>
             <span>Join today. Cancel anytime.</span>
-            <span>Ready to watch? Enter your email to create or restart your membership.</span>   
+            <span>Ready to watch? Enter your email to create or restart your membership.</span>
             <div class="hero-buttons">
                 <input type="text" placeholder="Enmail Adress">
-                <button class="btn btn-red">Get Started</button>
+                <button class="btn btn-red">Get Started &gt;</button>
             </div>
         </div>
         <div class="sepration"></div>
+        <section class="first">
+            <div>
+                <span>Enjoy on your TV</span>
+                <span>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</span>
+            </div>
+            <div class="secImg">
+                <img src="assets/images/tv.png" alt="">
+                <video
+                    src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-tv-in-0819.m4v"
+                    autoplay loop muted></video>
+            </div>
+        </section>
+        <div class="sepration"></div>
+        <section class="first second">
+            <div class="secImg">
+                <img src="assets/images/mobile-0819.jpg" alt="">
+            </div>
+            <div>
+                <span>Download your shows to watch offline</span>
+                <span>Save your favourites easily and always have something to watch.</span>
+            </div>
+        </section>
+        <div class="sepration"></div>
+        <section class="first third">
+            <div>
+                <span>Watch everywhere</span>
+                <span>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</span>
+            </div>
+            <div class="secImg">
+                <img src="assets/images/tv.png" alt="">
+                <video
+                    src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-devices-in.m4v"
+                    autoplay loop muted></video>
+            </div>
+        </section>
+        <div class="sepration"></div>
+        <section class="first second">
+            <div class="secImg">
+                <img src="assets/images/kids.png" alt="">
+            </div>
+            <div>
+                <span>Create profiles for kids</span>
+                <span>Send children on adventures with their favourite characters in a space made just for them—free
+                    with your membership.</span>
+            </div>
+        </section>
+        <div class="sepration"></div>
+
+        <section class="faq">
+            <h2>Frequently Asked Questions</h2>
+            <div class="faqbox">
+                <span>What is Netflix?</span>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#ffffff" fill="none">
+                    <path d="M12 4V20" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                    <path d="M4 12H20" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
+            </div>
+            <div class="faqbox">
+                <span>How much does Netflix cost?</span>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#ffffff" fill="none">
+                    <path d="M12 4V20" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                    <path d="M4 12H20" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
+            </div>
+            <div class="faqbox">
+                <span>Where can I watch?</span>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#ffffff" fill="none">
+                    <path d="M12 4V20" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                    <path d="M4 12H20" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
+            </div>
+            <div class="faqbox">
+                <span>How do I cancel?</span>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#ffffff" fill="none">
+                    <path d="M12 4V20" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                    <path d="M4 12H20" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
+            </div>
+            <div class="faqbox">
+                <span>What can I watch on Netflix?</span>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#ffffff" fill="none">
+                    <path d="M12 4V20" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                    <path d="M4 12H20" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
+            </div>
+            <div class="faqbox">
+                <span>Is Netflix good for kids?</span>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#ffffff" fill="none">
+                    <path d="M12 4V20" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                    <path d="M4 12H20" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
+            </div>
+        </section>
     </div>
 </body>
+
 </html>
