--- a/index.html
+++ b/index.html
@@ -123,6 +123,40 @@
                 </svg>
             </div>
         </section>
+        <div class="sepration"></div>
+        <footer>
+            <div class="questions">Questions? Call 000-800-919-1694</div>
+            <div class="footer">
+            <div class="footer-item">
+                <a href="faq">FAQ</a>
+                <a href="investor">Investors Relation</a>
+                <a href="investor">Investors Relation</a>
+                <a href="investor">Investors Relation</a>
+                <a href="investor">Investors Relation</a>
+            </div>
+            <div class="footer-item">
+                <a href="faq">FAQ</a>
+                <a href="investor">Investors Relation</a>
+                <a href="investor">Investors Relation</a>
+                <a href="investor">Investors Relation</a>
+                <a href="investor">Investors Relation</a>
+            </div>
+            <div class="footer-item">
+                <a href="faq">FAQ</a>
+                <a href="investor">Investors Relation</a>
+                <a href="investor">Investors Relation</a>
+                <a href="investor">Investors Relation</a>
+                <a href="investor">Investors Relation</a>
+            </div>
+            <div class="footer-item">
+                <a href="faq">FAQ</a>
+                <a href="investor">Investors Relation</a>
+                <a href="investor">Investors Relation</a>
+                <a href="investor">Investors Relation</a>
+                <a href="investor">Investors Relation</a>
+            </div>
+        </div>
+        </footer>
     </div>
 </body>
 
