responsive done and all minor errors fixed

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                 <span>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</span>
             </div>
             <div class="secImg">
-                <img src="assets/images/tv.png" alt="">
-                <video
+                <img src="assets/images/device-pile-in.png" alt="">
+                <video class="video-new"
                     src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-devices-in.m4v"
                     autoplay loop muted></video>
             </div>
@@ -77,6 +77,7 @@
             </div>
         </section>
         <div class="sepration"></div>
+
 
         <section class="faq">
             <h2>Frequently Asked Questions</h2>
@@ -130,30 +131,25 @@
             <div class="footer-item">
                 <a href="faq">FAQ</a>
                 <a href="investor">Investors Relation</a>
-                <a href="investor">Investors Relation</a>
-                <a href="investor">Investors Relation</a>
-                <a href="investor">Investors Relation</a>
+                <a href="investor">Privacy</a>
+                <a href="investor">Speed Test</a>
             </div>
             <div class="footer-item">
-                <a href="faq">FAQ</a>
-                <a href="investor">Investors Relation</a>
-                <a href="investor">Investors Relation</a>
-                <a href="investor">Investors Relation</a>
-                <a href="investor">Investors Relation</a>
+                <a href="investor">Help Centre</a>
+                <a href="investor">Jobs</a>
+                <a href="investor">Cookie Preferences</a>
+                <a href="investor">Legal Notices</a>
             </div>
             <div class="footer-item">
-                <a href="faq">FAQ</a>
-                <a href="investor">Investors Relation</a>
-                <a href="investor">Investors Relation</a>
-                <a href="investor">Investors Relation</a>
-                <a href="investor">Investors Relation</a>
+                <a href="investor">Account</a>
+                <a href="investor">Ways to Watch</a>
+                <a href="investor">Corporate Information</a>
+                <a href="investor">Only on Netflix</a>
             </div>
             <div class="footer-item">
-                <a href="faq">FAQ</a>
-                <a href="investor">Investors Relation</a>
-                <a href="investor">Investors Relation</a>
-                <a href="investor">Investors Relation</a>
-                <a href="investor">Investors Relation</a>
+                <a href="investor">Media Centre</a>
+                <a href="investor">Terms of Use</a>
+                <a href="investor">Contact Us</a>
             </div>
         </div>
         </footer>
